Change-hero-image

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         </a>
                     </div>
                     <div class="hero_img">
-                        <img src="./images/me4c.png" alt="">
+                        <img src="https://res.cloudinary.com/dslgece8b/image/upload/v1762792764/processed_image_3_qzhhwz.png" alt="">
                     </div>
                 </div>
             </section>
